--- a/eAppointmentClient/src/index.html
+++ b/eAppointmentClient/src/index.html
@@ -6,6 +6,15 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>
+    // Suppress browser extension errors in console
+    window.addEventListener('error', function(e) {
+      if (e.message && e.message.includes('runtime.lastError')) {
+        e.preventDefault();
+        return false;
+      }
+    });
+  </script>
 </head>
 <body>
   <app-root></app-root>
